# synchroniseFolder

./: README.md  config.json  destinationAPI.py  main.py  pyproject.toml  setup.py
.github/workflows/: python-app.yml
src/: destinationAPI.py  main.py  server.py
test/: test_destinationAPI.py  test_main.py
